--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.4.0",
+    "cross-env": "^7.0.3",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.3.1",
     "dotenv-cli": "^7.2.1",
@@ -23,7 +24,7 @@
   },
   "scripts": {
     "start": "yarn react-scripts start",
-    "build": "react-scripts build",
+    "build": "cross-env CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
